tests/negative/unterminated_char.c
int main(void) { int x = 'a; return x; }
